Add broken test

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
   <body>
     <h1>Oli's Mentoring Sandbox</h1>
     <ul>
+      <li><a href="/broken-test#smartserve_p=2499&smartserve_preview=1&etcForceCreative=212378&smartserve_debug=1">Broken Test</a></li>
       <li><a href="/broken-smartserve#smartserve_p=2499&smartserve_preview=1&etcForceCreative=212376&smartserve_debug=1">Broken Smartserve</a></li>
     </ul>
   </body>
